--- a/agenda-auto-pwa/src/app/modules/forgot-password/forgot-password.page.html
+++ b/agenda-auto-pwa/src/app/modules/forgot-password/forgot-password.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>AgendaAuto</ion-title>
+    <ion-title>Reseteaza parola</ion-title>
   </ion-toolbar>
 </ion-header>
 
