--- a/agenda-auto-pwa/src/app/modules/register/register.page.html
+++ b/agenda-auto-pwa/src/app/modules/register/register.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>AgendaAuto</ion-title>
+    <ion-title>Inregistreaza-te</ion-title>
   </ion-toolbar>
 </ion-header>
 
