add registration logic

--- a/agenda-auto-pwa/src/app/app.component.html
+++ b/agenda-auto-pwa/src/app/app.component.html
@@ -6,7 +6,7 @@
           <ion-list-header>AgendaAuto</ion-list-header>
           <ion-note>agenda.auto.app@gmail.com</ion-note>
 
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
+          <ion-menu-toggle auto-hide="false" *ngFor="let p of (appPages$ | async); let i = index">
             <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
               <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
