--- a/agenda-auto-pwa/src/app/modules/forgot-password/forgot-password.page.html
+++ b/agenda-auto-pwa/src/app/modules/forgot-password/forgot-password.page.html
@@ -8,5 +8,18 @@
 </ion-header>
 
 <ion-content>
+  <form>
+    <ion-item lines="full">
+      <ion-label position="floating">Email</ion-label>
+      <ion-input type="text" required></ion-input>
+    </ion-item>
 
+    <ion-row>
+      <ion-col class="actions-container">
+        <ion-button type="submit" color="danger" expand="block">Reseteaza parola</ion-button>
+        <a [routerLink]="['/register']" class="small-text ion-padding-top">Utilizator nou? Creeaza cont</a>
+        <a [routerLink]="['/login']" class="small-text ion-padding-top">Ai deja un cont si stii parola?</a>
+      </ion-col>
+    </ion-row>
+  </form>
 </ion-content>
