--- a/agenda-auto-pwa/src/app/modules/login/login.page.html
+++ b/agenda-auto-pwa/src/app/modules/login/login.page.html
@@ -17,9 +17,9 @@
     </ion-item>
 
     <ion-row>
-      <ion-col class="test">
+      <ion-col class="actions-container">
         <ion-button type="submit" color="danger" expand="block">Intra in cont</ion-button>
-        <a [routerLink]="['/register']" class="small-text ion-padding-top">Creeaza cont</a>
+        <a [routerLink]="['/register']" class="small-text ion-padding-top">Utilizator nou? Creeaza cont</a>
         <a [routerLink]="['/forgot-password']" class="small-text ion-padding-top">Ai uitat parola?</a>
       </ion-col>
     </ion-row>
