--- a/agenda-auto-pwa/src/app/modules/forgot-password/forgot-password.page.html
+++ b/agenda-auto-pwa/src/app/modules/forgot-password/forgot-password.page.html
@@ -8,15 +8,26 @@
 </ion-header>
 
 <ion-content>
-  <form>
+  <form [formGroup]="formGroup">
     <ion-item lines="full">
       <ion-label position="floating">Email</ion-label>
-      <ion-input type="text" required></ion-input>
+      <ion-input [formControl]="emailControl" type="text" required></ion-input>
     </ion-item>
+
+    <ng-container *ngIf="emailControl.touched">
+      <ion-text class="ion-padding-start" color="danger" *ngIf="emailControl.errors?.required">
+        Te rugăm să completezi adresa de e-mail
+      </ion-text>
+      <ion-text class="ion-padding-start" color="danger" *ngIf="emailControl.errors?.email">
+        Adresă de e-mail invalidă
+      </ion-text>
+    </ng-container>
+    <ion-text class="ion-padding-start" color="danger" *ngIf="resetError">{{resetError}}</ion-text>
+    <ion-text class="ion-padding-start" color="success" *ngIf="succesfulMessage">{{succesfulMessage}}</ion-text>
 
     <ion-row>
       <ion-col class="actions-container">
-        <ion-button type="submit" color="danger" expand="block">Reseteaza parola</ion-button>
+        <ion-button type="submit" (click)="resetPassword()" color="danger" expand="block">Reseteaza parola</ion-button>
         <a [routerLink]="['/register']" class="small-text ion-padding-top">Utilizator nou? Creeaza cont</a>
         <a [routerLink]="['/login']" class="small-text ion-padding-top">Ai deja un cont si stii parola?</a>
       </ion-col>
