--- a/agenda-auto-pwa/src/app/modules/dashboard/dashboard.page.scss
+++ b/agenda-auto-pwa/src/app/modules/dashboard/dashboard.page.scss
@@ -3,26 +3,30 @@ ion-menu-button {
 }
 
 #container {
-  text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  height: 100%;
+  gap: 32px;
+  flex: 4;
+  flex-wrap: wrap;
+  width: 50%;
+  min-width: 320px;
+  margin: 0 auto;
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+  .logo {
+    flex: 0 0 25%;
+    align-self: stretch;
+  }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-  color: #8c8c8c;
-  margin: 0;
-}
+  .consumables {
+    flex: 0 0 25%;
+    align-self: stretch;
+  }
 
-#container a {
-  text-decoration: none;
+  .documents {
+    flex: 0 0 25%;
+    align-self: stretch;
+  }
 }
