--- a/agenda-auto-pwa/src/app/modules/dashboard/dashboard.page.scss
+++ b/agenda-auto-pwa/src/app/modules/dashboard/dashboard.page.scss
@@ -15,18 +15,50 @@ ion-menu-button {
   min-width: 320px;
   margin: 0 auto;
 
-  .logo {
-    flex: 0 0 25%;
+  .title-container {
+    flex: 0 0 20%;
     align-self: stretch;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .logo {
+      background-image: url(/assets/logo.png);
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+      width: 120px;
+      height: 120px;
+    }
+
+    .title {
+      font-size: 24px;
+      font-weight: bold;
+    }
   }
 
   .consumables {
-    flex: 0 0 25%;
+    flex: 0 0 30%;
     align-self: stretch;
   }
 
   .documents {
-    flex: 0 0 25%;
+    background-color: var(--ion-card-background);
+    border-radius: 4px;
+    flex: 0 0 30%;
     align-self: stretch;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+    .documents-title {
+      font-size: 20px;
+      font-weight: 500;
+    }
+
+    .documents-subtitle {
+      color: #f6c792;
+      font-size: 14px;
+    }
   }
 }
