--- a/agenda-auto-pwa/src/theme/variables.scss
+++ b/agenda-auto-pwa/src/theme/variables.scss
@@ -38,12 +38,12 @@
   --ion-color-warning-shade: #d8af80;
   --ion-color-warning-tint: #f7cd9d;
 
-  --ion-color-danger: #6C792;
-  --ion-color-danger-rgb: 6, 199, 146;
+  --ion-color-danger: #ffc409;
+  --ion-color-danger-rgb: 255, 196, 9;
   --ion-color-danger-contrast: #000000;
   --ion-color-danger-contrast-rgb: 0, 0, 0;
-  --ion-color-danger-shade: #05af80;
-  --ion-color-danger-tint: #1fcd9d;
+  --ion-color-danger-shade: #e0ac08;
+  --ion-color-danger-tint: #ffca22;
 
   --ion-color-medium: #92949c;
   --ion-color-medium-rgb: 146, 148, 156;
@@ -67,47 +67,47 @@
    */
 
   body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66, 140, 255;
+    --ion-color-primary: #1e2025;
+    --ion-color-primary-rgb: 30, 32, 37;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255, 255, 255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary-shade: #1a1c21;
+    --ion-color-primary-tint: #35363b;
 
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80, 200, 255;
+    --ion-color-secondary: #333b44;
+    --ion-color-secondary-rgb: 51, 59, 68;
     --ion-color-secondary-contrast: #ffffff;
     --ion-color-secondary-contrast-rgb: 255, 255, 255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+    --ion-color-secondary-shade: #2d343c;
+    --ion-color-secondary-tint: #474f57;
 
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106, 100, 255;
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
+    --ion-color-tertiary: #f6c792;
+    --ion-color-tertiary-rgb: 246, 199, 146;
+    --ion-color-tertiary-contrast: #000000;
+    --ion-color-tertiary-contrast-rgb: 0, 0, 0;
+    --ion-color-tertiary-shade: #d8af80;
+    --ion-color-tertiary-tint: #f7cd9d;
 
-    --ion-color-success: #2fdf75;
-    --ion-color-success-rgb: 47, 223, 117;
+    --ion-color-success: #f6c792;
+    --ion-color-success-rgb: 246, 199, 146;
     --ion-color-success-contrast: #000000;
     --ion-color-success-contrast-rgb: 0, 0, 0;
-    --ion-color-success-shade: #29c467;
-    --ion-color-success-tint: #44e283;
+    --ion-color-success-shade: #d8af80;
+    --ion-color-success-tint: #f7cd9d;
 
-    --ion-color-warning: #ffd534;
-    --ion-color-warning-rgb: 255, 213, 52;
+    --ion-color-warning: #f6c792;
+    --ion-color-warning-rgb: 246, 199, 146;
     --ion-color-warning-contrast: #000000;
     --ion-color-warning-contrast-rgb: 0, 0, 0;
-    --ion-color-warning-shade: #e0bb2e;
-    --ion-color-warning-tint: #ffd948;
+    --ion-color-warning-shade: #d8af80;
+    --ion-color-warning-tint: #f7cd9d;
 
-    --ion-color-danger: #ff4961;
-    --ion-color-danger-rgb: 255, 73, 97;
-    --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255, 255, 255;
-    --ion-color-danger-shade: #e04055;
-    --ion-color-danger-tint: #ff5b71;
+    --ion-color-danger: #ffc409;
+    --ion-color-danger-rgb: 255, 196, 9;
+    --ion-color-danger-contrast: #000000;
+    --ion-color-danger-contrast-rgb: 0, 0, 0;
+    --ion-color-danger-shade: #e0ac08;
+    --ion-color-danger-tint: #ffca22;
 
     --ion-color-dark: #f4f5f8;
     --ion-color-dark-rgb: 244, 245, 248;
