--- a/agenda-auto-pwa/src/app/modules/forgot-password/forgot-password.page.html
+++ b/agenda-auto-pwa/src/app/modules/forgot-password/forgot-password.page.html
@@ -27,7 +27,7 @@
 
     <ion-row>
       <ion-col class="actions-container">
-        <ion-button type="submit" (click)="resetPassword()" color="danger" expand="block">Reseteaza parola</ion-button>
+        <ion-button type="submit" (click)="resetPassword()" color="tertiary" expand="block">Reseteaza parola</ion-button>
         <a [routerLink]="['/register']" class="small-text ion-padding-top">Utilizator nou? Creeaza cont</a>
         <a [routerLink]="['/login']" class="small-text ion-padding-top">Ai deja un cont si stii parola?</a>
       </ion-col>
