--- a/agenda-auto-pwa/src/theme/variables.scss
+++ b/agenda-auto-pwa/src/theme/variables.scss
@@ -24,12 +24,12 @@
   --ion-color-tertiary-shade: #d4974c;
   --ion-color-tertiary-tint: #f2b467;
 
-  --ion-color-success: #2dd36f;
-  --ion-color-success-rgb: 45, 211, 111;
+  --ion-color-success: #15b8a1;
+  --ion-color-success-rgb: 21, 184, 161;
   --ion-color-success-contrast: #000000;
   --ion-color-success-contrast-rgb: 0, 0, 0;
-  --ion-color-success-shade: #28ba62;
-  --ion-color-success-tint: #42d77d;
+  --ion-color-success-shade: #12a28e;
+  --ion-color-success-tint: #2cbfaa;
 
   --ion-color-warning: #ffc409;
   --ion-color-warning-rgb: 255, 196, 9;
@@ -88,12 +88,12 @@
     --ion-color-tertiary-shade: #d4974c;
     --ion-color-tertiary-tint: #f2b467;
 
-    --ion-color-success: #2fdf75;
-    --ion-color-success-rgb: 47, 223, 117;
+    --ion-color-success: #15b8a1;
+    --ion-color-success-rgb: 21, 184, 161;
     --ion-color-success-contrast: #000000;
     --ion-color-success-contrast-rgb: 0, 0, 0;
-    --ion-color-success-shade: #29c467;
-    --ion-color-success-tint: #44e283;
+    --ion-color-success-shade: #12a28e;
+    --ion-color-success-tint: #2cbfaa;
 
     --ion-color-warning: #ffd534;
     --ion-color-warning-rgb: 255, 213, 52;
