--- a/agenda-auto-pwa/src/app/modules/documents/documents.page.scss
+++ b/agenda-auto-pwa/src/app/modules/documents/documents.page.scss
@@ -3,12 +3,63 @@ ion-menu-button {
 }
 
 #container {
-  text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .container-document {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--ion-card-background);
+    align-items: stretch;
+    max-width: 700px;
+    width: 90%;
+    gap: 8px;
+    position: relative;
+
+    .delete-icon {
+      position: absolute;
+      right: 8px;
+      top: 8px;
+      font-size: 20px;
+      z-index: 1;
+    }
+  }
+
+  .progress-bar-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 12px;
+  }
+
+  .progress-bar {
+    height: 18px;
+    border-radius: 10px;
+    background-color: white;
+    border: 2px solid var(--ion-color-success);
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+
+    .filled {
+      position: absolute;
+      left: 0px;
+      height: 100%;
+      top: 0px;
+      border-radius: 10px;
+      background-color: var(--ion-color-success);
+    }
+
+    .progress-bar-text {
+      color: black;
+      font-weight: bold;
+      font-size: 12px;
+      z-index: 1;
+    }
+  }
 }
 
 #container strong {
@@ -34,7 +85,7 @@ ion-header {
     display: flex;
     flex-direction: column;
 
-    .document {
+    .header-document {
       display: flex;
       flex-direction: row;
       height: 24px;
